--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,39 @@
 *
-{
+{   
+    overflow: hidden;
     margin: 0;
     padding: 0;
 }
+
+body{
+    background: #1E1E1E;
+}
+
+
+.container{
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    background: radial-gradient(49.31% 97.5% at 48.68% 48.83%, rgba(0, 0, 0, 0.77) 0%, rgba(12, 13, 24, 0.83) 100%)
+}
+
+
+.img-container{
+
+    position: relative;
+    top: 10vh;
+
+    width: 50%;
+    margin: auto;
+
+    padding: 2rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
 
 #display-image{
 
@@ -11,11 +42,10 @@
     width: auto;
     height: auto;
 
+    margin: 8%;
+
     border: 1px solid black;
 
-    position: absolute;
-    top: 30%;
-    left: 32%;
 }  
 
 .predict{
