--- a/src/style.css
+++ b/src/style.css
@@ -1,55 +1,66 @@
-*
-{   
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
+* {
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    background: #1E1E1E;
+.mainSection {
+  height: 80%;
+  width: 55%;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-style: solid;
+  border-radius: 17px;
+  border-width: 0px;
+  flex-direction: column;
 }
-
-
-.container{
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    background: radial-gradient(49.31% 97.5% at 48.68% 48.83%, rgba(0, 0, 0, 0.77) 0%, rgba(12, 13, 24, 0.83) 100%)
+.bg {
+  background-image: url("../static/img/Bg.jpg");
+  height: 100vh;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
-
-.img-container{
-
-    position: relative;
-    top: 10vh;
-
-    width: 50%;
-    margin: auto;
-
-    padding: 2rem;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
+.bg2 {
+  background-color: #ffffff;
+  border-style: solid;
+  border-radius: 8px;
+  height: 45%;
+  width: 45%;
 }
-
-
-#display-image{
-
-    max-width:920px;
-    max-height:380px;
-    width: auto;
-    height: auto;
-
-    margin: 8%;
-
-    border: 1px solid black;
-
-}  
-
-.predict{
-    position: absolute;
-    top: 5%;
-    left: 50%;
+.butt {
+  background-color: red;
+  color: white;
+  border-radius: 10px;
+  border-width: 0px;
+  height: 35px;
+  width: 130px;
+  padding: 10px;
+  margin: 10px;
+}
+.butt2 {
+  background-color: blue;
+  color: white;
+  border-radius: 10px;
+  border-width: 0px;
+  height: 35px;
+  width: 130px;
+  padding: 5px;
+  margin: 10px;
+}
+.subSection {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.bg3 {
+  background-color: #ffffff;
+  border-style: solid;
+  border-radius: 8px;
+  height: 10%;
+  width: 45%;
+  margin-top: 30px;
 }
